# shoots

./: README.md  pyproject.toml
src/shoots/: __init__.py  cli.py  discover.py  printer.py
src/shoots/commands/: files.py  info.py  monitor.py  print.py
